better config + cleanup + stuff

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,32 @@
-POSTGRES_USER=user1
+LOG_LEVEL=debug # debug, info, error
+LOG_HANDLER=text # text, json
+
+POSTGRES_USER=cherry
 POSTGRES_HOST=0.0.0.0
 POSTGRES_PASSWORD=123
 POSTGRES_PORT=5432
 POSTGRES_NAME=twitchclone
+
 REDIS_PORT=6379
 REDIS_PASSWORD=123
 REDIS_HOST=127.0.0.1
-API_PORT=8090
+
+AUTH_CLIENT_HOST=0.0.0.0
+AUTH_CLIENT_PORT=44044
+AUTH_CLIENT_TIMEOUT_SECONDS=5s
+AUTH_CLIENT_RETRIES=3
+
+AUTH_SERVICE_MOCK=true
+
+STREAM_SERVICE_MOCK=true
+
+HTTP_HOST=0.0.0.0
+HTTP_PORT=8090
+HTTP_READ_TIMEOUT=30s
+HTTP_WRITE_TIMEOUT=30s
+HTTP_IDLE_TIMEOUT=30s
+
+UPDATE_CATEGORIES_TIMEOUT_SECONDS=10s
+UPDATE_LIVESTREAMS_TIMEOUT_SECONDS=15s
+
+ENV=local
