added consistent errors, fixes & better logging

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ POSTGRES_USER=cherry
 POSTGRES_HOST=0.0.0.0
 POSTGRES_PASSWORD=123
 POSTGRES_PORT=5432
-POSTGRES_NAME=twitchclone
+POSTGRES_DB=baklava
 
 REDIS_PORT=6379
 REDIS_PASSWORD=123
