added tests, changed module name, minor fixes + cleanup

--- a/.env.example
+++ b/.env.example
@@ -33,3 +33,7 @@ STREAM_SERVER_PORT=1985
 STREAM_SERVER_API_ENDPOINT=/api/v1
 
 ENV=local
+
+GOOSE_DRIVER=postgres
+GOOSE_DBSTRING=postgres://cherry:123@localhost:5432/baklava
+GOOSE_MIGRATION_DIR=./internal/external/db/migrations
